# sacda-metadata-assistant

./: .gitignore  components.json  package.json  pnpm-lock.yaml  svelte.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helpers/ollama/: README.md
src-tauri/ollama/: README.md
src-tauri/src/: lib.rs  main.rs  moondream_vision_example.rs  ollama_helpers.rs  qwen.rs
src/lib/components/: app-sidebar.svelte  sidebar-page.svelte
src/lib/components/custom/: ChatArea.svelte  HeaderNav.svelte  LeftNav.svelte  ThemeSwitcher.svelte
src/lib/components/ui/breadcrumb/: breadcrumb-ellipsis.svelte  breadcrumb-item.svelte  breadcrumb-link.svelte  breadcrumb-list.svelte  breadcrumb-page.svelte  breadcrumb-separator.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/label/: label.svelte
src/lib/components/ui/sheet/: sheet-content.svelte  sheet-overlay.svelte  sheet-portal.svelte
src/lib/components/ui/sidebar/: sidebar-input.svelte  sidebar-provider.svelte  sidebar.svelte
src/lib/components/ui/textarea/: textarea.svelte
src/lib/components/ui/tooltip/: tooltip-content.svelte
src/lib/utils/: nav.store.ts
src/routes/: +layout.svelte  +page.svelte  test.svelte
src/routes/excel/: +page.svelte
src/routes/test/: +page.svelte
