[package]
name = "sacda-metadata-assistant"
version = "0.1.0"
description = "A desktop app for assisting with metadata tasks at SACDA"
authors = ["Arnav Mehta"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sacda_metadata_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = {version = "0.21.0", default-features = false} 
anyhow = {version = "1.0.96", features = ["backtrace"]} 
# ollama-rs = "0.2.5"
hf-hub = { version = "0.4.1", features = ["tokio"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
clap = {version = "4.5.30", features = [ "derive" ]}
tracing="0.1.41"
tracing-subscriber = "0.3.19"
tracing-chrome = "0.7.2"
tokio = "1.43.0"
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png"] }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
accelerate-src = { version = "0.3.2" }
